--- a/manifests/cluster/rbac/clusterrolebindings.yaml
+++ b/manifests/cluster/rbac/clusterrolebindings.yaml
@@ -1,12 +1,27 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
-  name: aks-cluster-admin-binding-k8s-resources
+  name: yelb-admins
+  namespace: yelb
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: cluster-admin
+  kind: Role
+  name: admin
 subjects:
 - apiGroup: rbac.authorization.k8s.io
-  kind: User
-  name: padorp@microsoft.com
+  kind: Group
+  name: '23e31ded-a0b2-408b-ad2d-cc1ed3c70cf7'
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: guestbook-admins
+  namespace: guestbook
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: admin
+subjects:
+- apiGroup: rbac.authorization.k8s.io
+  kind: Group
+  name: '23e31ded-a0b2-408b-ad2d-cc1ed3c70cf7'
