--- a/manifests/yelb/deployments.yaml
+++ b/manifests/yelb/deployments.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: yelb-ui
+  namespace: yelb
 spec:
   replicas: 1
   selector:
@@ -31,6 +32,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis-server
+  namespace: yelb
 spec:
   replicas: 1
   selector:
@@ -60,6 +62,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: yelb-db
+  namespace: yelb
 spec:
   replicas: 1
   selector:
@@ -89,6 +92,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: yelb-appserver
+  namespace: yelb
 spec:
   replicas: 1
   selector:
