--- a/manifests/yelb/ingress.yaml
+++ b/manifests/yelb/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: "yelb-ui"
+  namespace: yelb
   annotations:
     kubernetes.io/ingress.class: azure/application-gateway
   labels:
