--- a/manifests/yelb/ingress.yaml
+++ b/manifests/yelb/ingress.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: yelb
   annotations:
     kubernetes.io/ingress.class: azure/application-gateway
+    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
+    appgw.ingress.kubernetes.io/backend-protocol: "http"
   labels:
     app: "yelb-ui"
 spec:
