--- a/manifests/guestbook/ingress.yaml
+++ b/manifests/guestbook/ingress.yaml
@@ -11,7 +11,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /guestbook/*
+          - path: /*
             backend:
               serviceName: guestbook
               servicePort: 80
