--- a/manifests/cluster/patches/kustomization.yaml
+++ b/manifests/cluster/patches/kustomization.yaml
@@ -1,4 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+resources:
+  - agic-watch-all-namespaces.yaml
 patches:
   - agic-watch-all-namespaces.yaml
