--- a/manifests/guestbook/ingress.yaml
+++ b/manifests/guestbook/ingress.yaml
@@ -5,13 +5,17 @@ metadata:
   namespace: guestbook
   annotations:
     kubernetes.io/ingress.class: azure/application-gateway
+    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
   labels:
     app: guestbook
 spec:
   rules:
     - http:
         paths:
-          - path: /*
+          - path: /guestbook/
+            pathType: Prefix
             backend:
-              serviceName: guestbook
-              servicePort: 80
+              service: 
+                name: guestbook
+                port: 
+                  number: 80
