--- a/manifests/guestbook/ingress.yaml
+++ b/manifests/guestbook/ingress.yaml
@@ -5,14 +5,14 @@ metadata:
   namespace: guestbook
   annotations:
     kubernetes.io/ingress.class: azure/application-gateway
-    appgw.ingress.kubernetes.io/backend-path-prefix: "/guestbook/"
+    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
   labels:
     app: guestbook
 spec:
   rules:
     - http:
         paths:
-          - path: /guestbook/
+          - path: /guestbook/*
             pathType: Prefix
             backend:
               service: 
