--- a/manifests/yelb/ingress.yaml
+++ b/manifests/yelb/ingress.yaml
@@ -11,7 +11,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /yelb/*
+          - path: /*
             pathType: Prefix
             backend:
               service: 
