Update ingress... again

--- a/manifests/guestbook/ingress.yaml
+++ b/manifests/guestbook/ingress.yaml
@@ -12,6 +12,7 @@ spec:
     - http:
         paths:
           - path: /guestbook/*
+            pathType: Prefix
             backend:
               service: 
                 name: guestbook
